# Hiking.Studio

./: .gitignore  2021-06-08_result.json  2021-06-10T12_3hr_result.json  2021-06-11_result.json  2021-06-13T18_3hr_result.json  2021-06-14T18_3hr_result.json  2021-06-15T12_3hr_result.json  2021-06-15T18_3hr_result.json  2021-06-16T06_3hr_result.json  2021-06-16T12_3hr_result.json  2021-06-19T06_3hr_result.json  2021-06-20T00_3hr_result.json  2021-06-21T12_3hr_result.json  2021-06-22T12_3hr_result.json  2021-06-23T18_3hr_result.json  2021-06-23_result.json  2021-06-24T12_3hr_result.json  2021-06-24T18_3hr_result.json  2021-06-25T00_3hr_result.json  2021-07-09T18_3hr_result.json  2021-07-10T12_3hr_result.json  2021-07-12T00_3hr_result.json  2021-07-12T12_3hr_result.json  2021-07-13T12_3hr_result.json  README.md  Wx_code.csv  api.ipynb  api.pi  api.py  check_trail_all.csv  check_trail_lat24.7.csv  cron.sh  docker-compose.yaml  final_trail_list.json  getsql.py  manage.py  module.py  mountain.txt  pyproject.toml  pytest.ini  (+4 more)
.ipynb_checkpoints/: api-checkpoint.ipynb
app/: dockerfile
conf/: users.xml
docker-compose/: docker-compose-clickhouse.yaml
hiking_2023/: asgi.py  settings.py  urls.py  wsgi.py
savedData/: 2021-06-06_result.json  2021-06-07_result.json  2021-06-08T123hr_result.json  2021-06-08T183hr_result.json  2021-06-08T18_3hr_result.json  2021-06-09T12_3hr_result.json  2021-06-09T18_3hr_result.json  2021-06-09_result.json  2021-06-10T00_3hr_result.json  2021-06-10T06_3hr_result.json  2021-06-10_result.json  2021-06-11T00_3hr_result.json  2021-06-12_result.json  (+311 more)
(+20 files in other folders)
