[tool.poetry]
name = "hiking"
version = "0.1.0"
description = ""
authors = ["SKai <skai_0321@reddoor.com.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
environ = "^1.0"
selenium = "^4.8.3"
requests = "^2.28.2"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
